--- a/static/css/app.css
+++ b/static/css/app.css
@@ -97,7 +97,8 @@ button,select {
 }
 
 [type=button],[type=reset],[type=submit],button {
-    -webkit-appearance: button
+    -webkit-appearance: button;
+    appearance: button
 }
 
 [type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
@@ -142,6 +143,7 @@ textarea {
 
 [type=search] {
     -webkit-appearance: textfield;
+    appearance: textfield;
     outline-offset: -2px
 }
 
@@ -151,6 +153,7 @@ textarea {
 
 ::-webkit-file-upload-button {
     -webkit-appearance: button;
+    appearance: button;
     font: inherit
 }
 
