--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3427,6 +3427,7 @@ a.dark-bg:focus,a.dark-bg:hover {
 
 .stored-calculations-name button span {
     -webkit-line-clamp: 1;
+    line-clamp: 1;
     -webkit-box-orient: vertical;
     display: -webkit-box;
     max-width: 100%;
@@ -5128,7 +5129,8 @@ textarea.resize-vertical {
 }
 
 [type=number] {
-    -moz-appearance: textfield
+    -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 [type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
@@ -6969,6 +6971,7 @@ body.focus-mode:after {
 
 .slider-dot {
     -webkit-backface-visibility: visible;
+    backface-visibility: visible;
     background-color: #5f7485;
     border: 0;
     border-radius: 50%;
