završene preinake s datumom u budućnosti

--- a/templates/index.html
+++ b/templates/index.html
@@ -219,7 +219,7 @@
                             <div class="field moratorium">
                                 <span class="field-group-title">Zastoj tijeka zateznih kamata</span>
                                 <div class="field-option">
-                                    <input type="checkbox" name="moratorium" id="moratorium" value="on">
+                                    <input type="checkbox" name="moratorium" id="moratorium" value="on" checked>
                                     <label for="moratorium" class="field-option-label">Uključi obustavu na izračun zzk
                                         od 18.4.2020 do 18.10.2020</label>
                                 </div>
