dodavanje gumba za kamatne stope

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,11 @@
                     <span class="text-truncate">Svi izračuni</span>
                     <span id="buttonCounter" class="button-counter">0</span>
                 </a>
+                <button type="button" class="button button--secondary button--tiny" data-toggle="modal"
+                    data-target="interest-update">
+                    <img src="{{ url_for('static', filename='images/settings.svg') }}" onload="SVGInject(this)" />
+                    <span class="text-truncate">Ažuriranje kamata</span>
+                </button>
             </div>
 
 
